# torch-ffmpeglib

./: CMakeLists.txt  FindFFmpeg.cmake  README.TXT  ffmpeg.c  ffmpeglib-1.0-1-rockspec  init.lua  test.lua
examples/: multi-stream.lua  play.lua
generic/: ffmpeg.c
